kubernetes/apps/n8n/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: n8n-ingress
  namespace: n8n
  annotations:
    external-dns.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`n8n.sobrinho.pt`)
      kind: Rule
      services:
        - name: n8n
          port: http
  tls:
    secretName: n8n-cert
